--- a/WakeUP/Base.lproj/Main.storyboard
+++ b/WakeUP/Base.lproj/Main.storyboard
@@ -118,7 +118,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text=" Enter Your Name Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NlP-It-YSo">
+                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Enter Your Name Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NlP-It-YSo">
                                                     <rect key="frame" x="98" y="14" width="196" height="24"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -140,7 +140,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Please Pick Time" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CwK-vT-2fI">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Please Pick Time" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CwK-vT-2fI">
                                                     <rect key="frame" x="181" y="8" width="213" height="35.666666666666664"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="213" id="7p9-cQ-Nuy"/>
@@ -165,7 +165,7 @@
                     <navigationItem key="navigationItem" id="SbM-41-kQa">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="Tvt-hr-pAN">
                             <connections>
-                                <action selector="done:" destination="oij-YI-49T" id="6BR-9S-aMj"/>
+                                <action selector="save:" destination="oij-YI-49T" id="1Ta-bd-IUx"/>
                                 <segue destination="BYZ-38-t0r" kind="show" identifier="alarm" id="hSo-sh-VoI"/>
                             </connections>
                         </barButtonItem>
@@ -173,6 +173,7 @@
                     <connections>
                         <outlet property="alarmTime" destination="CwK-vT-2fI" id="sQ1-4W-sAS"/>
                         <outlet property="nameLabel" destination="NlP-It-YSo" id="Hpv-UC-Cw2"/>
+                        <segue destination="R3r-wq-w01" kind="custom" identifier="name" id="22g-uz-bp1"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3OS-VM-0IF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -231,7 +232,7 @@
             <objects>
                 <viewController id="R3r-wq-w01" customClass="Morning" customModule="WakeUP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Bm-nW-oei">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dove-of-Peace" translatesAutoresizingMaskIntoConstraints="NO" id="gC1-UX-Lll">
@@ -242,7 +243,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good Morning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAs-YV-NJ9">
-                                <rect key="frame" x="124" y="112" width="155" height="30"/>
+                                <rect key="frame" x="124" y="144" width="155" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="zjV-tY-Q3A"/>
                                 </constraints>
@@ -251,7 +252,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hd3-6o-Avw">
-                                <rect key="frame" x="47" y="191" width="320" height="217"/>
+                                <rect key="frame" x="47" y="223" width="320" height="239"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -288,7 +289,7 @@
         <!--Wake Up-->
         <scene sceneID="qoa-Yr-Fz6">
             <objects>
-                <viewController id="XJV-Lw-nVh" customClass="WakeUp" customModule="WakeUP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="WakeUp" storyboardIdentifier="WakeUP" id="XJV-Lw-nVh" customClass="WakeUp" customModule="WakeUP" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jWR-os-uRa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -375,8 +376,8 @@
         <image name="cool-black-background" width="2304" height="1440"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="nwm-nL-1nO"/>
+        <segue reference="22g-uz-bp1"/>
         <segue reference="43A-au-lvX"/>
-        <segue reference="n5I-2Y-NVS"/>
+        <segue reference="hSo-sh-VoI"/>
     </inferredMetricsTieBreakers>
 </document>
