--- a/WakeUP/Base.lproj/Main.storyboard
+++ b/WakeUP/Base.lproj/Main.storyboard
@@ -12,17 +12,17 @@
             <objects>
                 <viewController storyboardIdentifier="Home" id="BYZ-38-t0r" customClass="HomeScreen" customModule="WakeUP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cool-black-background" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m4d-dq-dVH">
-                                <rect key="frame" x="-37" y="-139" width="488" height="1025"/>
+                                <rect key="frame" x="-37" y="-193" width="488" height="1025"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1025" id="78E-yt-KTD"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Countdown until you need to Wake Up:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXK-ZO-F9o">
-                                <rect key="frame" x="44" y="509" width="326" height="21"/>
+                                <rect key="frame" x="44" y="455" width="326" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="akg-hb-dZf"/>
                                 </constraints>
@@ -31,13 +31,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dtl-hZ-Aa4">
-                                <rect key="frame" x="0.0" y="162" width="414" height="356"/>
+                                <rect key="frame" x="0.0" y="174" width="414" height="290"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Countdown" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="17" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCU-tO-MHq">
-                                <rect key="frame" x="146" y="589" width="119" height="48"/>
+                                <rect key="frame" x="146" y="535" width="119" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -66,7 +66,7 @@
                     <navigationItem key="navigationItem" id="6s4-mD-ypg">
                         <barButtonItem key="rightBarButtonItem" id="Aib-iA-uGl">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="C2w-Ry-G7y">
-                                <rect key="frame" x="302" y="7" width="92" height="30"/>
+                                <rect key="frame" x="302" y="13" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Account"/>
                                 <connections>
@@ -95,7 +95,7 @@
             <objects>
                 <tableViewController id="oij-YI-49T" customClass="Settings" customModule="WakeUP" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ef7-Xz-qEw">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="sectionIndexColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -277,8 +277,8 @@
                                     <constraint firstAttribute="width" constant="496" id="lf1-K4-rqS"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good Morning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAs-YV-NJ9">
-                                <rect key="frame" x="124" y="112" width="155" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Good Morning" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAs-YV-NJ9">
+                                <rect key="frame" x="47" y="112" width="320" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="zjV-tY-Q3A"/>
                                 </constraints>
@@ -311,7 +311,7 @@
                             <constraint firstItem="Y4T-cC-RnV" firstAttribute="bottom" secondItem="Hd3-6o-Avw" secondAttribute="bottom" constant="351" id="D4z-vm-mlu"/>
                             <constraint firstItem="mAs-YV-NJ9" firstAttribute="top" secondItem="Y4T-cC-RnV" secondAttribute="top" constant="56" id="EPX-AG-xKz"/>
                             <constraint firstItem="gC1-UX-Lll" firstAttribute="leading" secondItem="Y4T-cC-RnV" secondAttribute="leading" id="HhK-Dv-H8F"/>
-                            <constraint firstItem="mAs-YV-NJ9" firstAttribute="leading" secondItem="Y4T-cC-RnV" secondAttribute="leading" constant="124" id="NIN-JX-fwy"/>
+                            <constraint firstItem="mAs-YV-NJ9" firstAttribute="leading" secondItem="Y4T-cC-RnV" secondAttribute="leading" constant="47" id="NIN-JX-fwy"/>
                             <constraint firstItem="Hd3-6o-Avw" firstAttribute="top" secondItem="mAs-YV-NJ9" secondAttribute="bottom" constant="49" id="NrG-C1-ZT8"/>
                             <constraint firstItem="Hd3-6o-Avw" firstAttribute="leading" secondItem="Y4T-cC-RnV" secondAttribute="leading" constant="47" id="eaE-tb-ODp"/>
                             <constraint firstItem="Hd3-6o-Avw" firstAttribute="centerX" secondItem="6Bm-nW-oei" secondAttribute="centerX" id="fm5-ZG-Mab"/>
@@ -418,6 +418,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="SSH-zR-vZu"/>
-        <segue reference="HI3-YJ-Fyp"/>
+        <segue reference="c0e-wH-sPs"/>
     </inferredMetricsTieBreakers>
 </document>
